<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FragmentsExams.ECET.Fraagment_Checklist_Ecet_Main">
    <ScrollView android:layout_width="match_parent"
        android:layout_height="match_parent"
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:scrollbars="none"
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:background="@color/silver"
        tools:context=".examEamcet.Eamcet_Checklist">

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            xmlns:card_view="http://schemas.android.com/apk/res-auto"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="3dp"
            android:background="@color/silver"
            android:orientation="vertical"
            tools:context="com.rankquest.udaysaikumar.rankquest.CheckList">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:background="@color/silver"

                android:orientation="vertical">

                <com.google.android.material.card.MaterialCardView
                    android:layout_width="match_parent"
                    app:strokeWidth="0.8dp"
                    app:strokeColor="@color/black_overlay"
                    android:layout_height="wrap_content"
                    android:animateLayoutChanges="true"
                    android:clickable="true"
                    android:focusable="true"
                    android:foreground="?android:attr/selectableItemBackground"
                    android:padding="3dp"

                    app:cardBackgroundColor="@android:color/white"

                    card_view:cardCornerRadius="7dp">


                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="2dp"
                        android:orientation="vertical">


                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:fontFamily="serif"
                            android:padding="10dp"

                            android:text="@string/cl"
                            android:textColor="@color/colorPrimaryDark"
                            android:textSize="20sp" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:fontFamily="serif"
                            android:padding="4dp"
                            android:text="AP ECET 2019 Rank card"
                            android:textColor="#424242"
                            android:textSize="17sp" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="2dp"
                            android:fontFamily="serif"
                            android:padding="4dp"
                            android:text="AP ECET 2019 Hall Ticket "
                            android:textColor="#424242"
                            android:textSize="17sp" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="2dp"
                            android:fontFamily="serif"
                            android:padding="4dp"
                            android:text="Memorandum of Marks (Diploma/Degree)"
                            android:textColor="#424242"
                            android:textSize="17sp" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="2dp"
                            android:fontFamily="serif"
                            android:padding="4dp"
                            android:text="Provisional Diploma Certificate/Degree Certificate."
                            android:textColor="#424242"
                            android:textSize="17sp" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="2dp"
                            android:fontFamily="serif"
                            android:padding="4dp"
                            android:text="Proof of Date of Birth (SSC or its Equivalent Memo)."
                            android:textColor="#424242"
                            android:textSize="17sp" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="2dp"
                            android:fontFamily="serif"
                            android:padding="4dp"
                            android:text="Study Certificate from IV to Diploma/ 7th to Degree to B. Sc. Maths candidates"
                            android:textColor="#424242"
                            android:textSize="17sp" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="2dp"
                            android:fontFamily="serif"
                            android:padding="4dp"
                            android:text="@string/cl1p7"
                            android:textColor="#424242"
                            android:textSize="17sp" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="2dp"
                            android:fontFamily="serif"
                            android:padding="4dp"
                            android:text="@string/cl1p8"
                            android:textColor="#424242"
                            android:textSize="17sp" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="2dp"
                            android:fontFamily="serif"
                            android:padding="4dp"
                            android:text="@string/cl1p9"
                            android:textColor="#424242"
                            android:textSize="17sp" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="2dp"
                            android:fontFamily="serif"
                            android:padding="4dp"
                            android:text="@string/cl1p10"
                            android:textColor="#424242"
                            android:textSize="17sp" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="12dp"
                            android:fontFamily="serif"
                            android:padding="4dp"
                            android:text="@string/cl1p11"
                            android:textColor="#424242"
                            android:textSize="17sp" />

                    </LinearLayout>

                </com.google.android.material.card.MaterialCardView>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:background="@color/silver"
                android:orientation="vertical">

                <com.google.android.material.card.MaterialCardView
                    android:layout_width="match_parent"
                    app:strokeColor="@color/black_overlay"
                    app:strokeWidth="0.8dp"
                    android:layout_height="wrap_content"
                    android:animateLayoutChanges="true"
                    android:background="@color/colorPrimary"
                    android:clickable="true"
                    android:focusable="true"
                    android:foreground="?android:attr/selectableItemBackground"
                    android:padding="3dp"
                    card_view:cardBackgroundColor="@android:color/white"
                    card_view:cardCornerRadius="7dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:fontFamily="serif"
                            android:padding="10dp"

                            android:text="@string/cl2"
                            android:textColor="@color/colorPrimaryDark"
                            android:textSize="20sp" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="2dp"
                            android:fontFamily="serif"
                            android:padding="4dp"
                            android:text="@string/cl2p1"
                            android:textColor="#424242"
                            android:textSize="17sp" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="2dp"
                            android:fontFamily="serif"
                            android:padding="4dp"
                            android:text="@string/cl2p2"
                            android:textColor="#424242"
                            android:textSize="17sp" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="2dp"
                            android:fontFamily="serif"
                            android:padding="4dp"
                            android:text="@string/cl2p3"
                            android:textColor="#424242"
                            android:textSize="17sp" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="2dp"
                            android:fontFamily="serif"
                            android:padding="4dp"
                            android:text="@string/cl2p4"
                            android:textColor="#424242"
                            android:textSize="17sp" />
                    </LinearLayout>
                </com.google.android.material.card.MaterialCardView>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:background="@color/silver"
                android:orientation="vertical">

                <com.google.android.material.card.MaterialCardView
                    android:layout_width="match_parent"
                    app:strokeWidth="0.8dp"
                    app:strokeColor="@color/black_overlay"
                    android:layout_height="wrap_content"
                    android:animateLayoutChanges="true"
                    android:background="@color/colorPrimary"
                    android:clickable="true"
                    android:focusable="true"
                    android:foreground="?android:attr/selectableItemBackground"
                    android:padding="3dp"
                    card_view:cardBackgroundColor="@android:color/white"
                    card_view:cardCornerRadius="7dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:fontFamily="serif"
                            android:padding="10dp"

                            android:text="@string/cl4"
                            android:textColor="@color/colorPrimaryDark"
                            android:textSize="20sp" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:fontFamily="serif"
                            android:padding="4dp"
                            android:text="@string/cl5"
                            android:textColor="#424242"
                            android:textSize="17sp" />
                    </LinearLayout>
                </com.google.android.material.card.MaterialCardView>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:background="@color/silver"
                android:orientation="vertical">

                <com.google.android.material.card.MaterialCardView
                    app:strokeColor="@color/black_overlay"
                    app:strokeWidth="0.8dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:animateLayoutChanges="true"
                    android:clickable="true"
                    android:focusable="true"
                    android:foreground="?android:attr/selectableItemBackground"
                    android:padding="3dp"
                    card_view:cardBackgroundColor="@android:color/white"
                    card_view:cardCornerRadius="7dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:fontFamily="serif"
                            android:padding="10dp"

                            android:text="@string/cl6"
                            android:textColor="@color/colorPrimaryDark"
                            android:textSize="20sp" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:fontFamily="serif"
                            android:padding="4dp"
                            android:text="@string/cl7"
                            android:textColor="#424242"
                            android:textSize="17sp" />
                    </LinearLayout>
                </com.google.android.material.card.MaterialCardView>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:background="@color/silver"
                android:orientation="vertical">

                <com.google.android.material.card.MaterialCardView
                    android:layout_width="match_parent"
                    app:strokeWidth="0.8dp"
                    app:strokeColor="@color/black_overlay"
                    android:layout_height="wrap_content"
                    android:animateLayoutChanges="true"
                    android:clickable="true"
                    android:focusable="true"
                    android:foreground="?android:attr/selectableItemBackground"
                    android:padding="3dp"
                    card_view:cardBackgroundColor="@android:color/white"
                    card_view:cardCornerRadius="7dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:fontFamily="serif"
                            android:padding="10dp"

                            android:text="@string/cl8"
                            android:textColor="@color/colorPrimaryDark"
                            android:textSize="20sp" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:fontFamily="serif"
                            android:padding="4dp"
                            android:text="@string/cl9"
                            android:textColor="#424242"
                            android:textSize="17sp" />
                    </LinearLayout>
                </com.google.android.material.card.MaterialCardView>
            </LinearLayout>
        </LinearLayout>

    </ScrollView>

</FrameLayout>